# backend-app

./: Dockerfile  README.md  docker-compose.yml  entrypoint.dev.sh  entrypoint.sh  pyproject.toml
spaceapps_backend_app/: app.py
spaceapps_backend_app/algorithm/: algorithm.py  describe_image.py  generate_music.py
spaceapps_backend_app/cache/: redis.py  services.py
