[tool.poetry]
name = "spaceapps-backend-app"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
#packages = [{include = "spaceapps_backend_app"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.103.2"
uvicorn = {extras = ["standard"], version = "^0.23.2"}
aioredis = "^2.0.1"
dependency-injector = "^4.41.0"
python-multipart = "^0.0.6"
bardapi = "^0.1.38"
black = "^23.9.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
